--- a/sosmed.html
+++ b/sosmed.html
@@ -6,7 +6,7 @@
     <title>SocialMedia</title>
 
     <!--My Custom Css-->
-    <link rel="stylesheet" href="/socialmedia/css/sosmed.css">
+    <link rel="stylesheet" href="css/sosmed.css">
 
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
