--- a/sosmed.html
+++ b/sosmed.html
@@ -14,7 +14,7 @@
     <div class="containerMain">
         <div class="containerCard">
             <div class="containerProfil">
-                <img src="/assets/img/profil.png" alt="">
+                <img src="assets/img/profil.png" alt="">
                 <h1>M ALFITO RAHMAN</h1>
                 <p>Social Media</p>
             </div>
@@ -22,25 +22,25 @@
                 <a href="#" class="buttonSosmed">
                     <button>
                         <p>Facebook</p>
-                        <img src="/assets/img/facebook.png" alt="">
+                        <img src="assets/img/facebook.png" alt="">
                     </button>
                 </a>
                 <a href="#" class="buttonSosmed">
                     <button>
                         <p>Instagram</p>
-                        <img src="/assets/img/instagram1.png" alt="">
+                        <img src="assets/img/instagram1.png" alt="">
                     </button>
                 </a>
                 <a href="#" class="buttonSosmed">
                     <button>
                         <p>Whatsapp</p>
-                        <img src="/assets/img/whatsapp1.png" alt="">
+                        <img src="assets/img/whatsapp1.png" alt="">
                     </button>
                 </a>
                 <a href="#" class="buttonSosmed">
                     <button>
                         <p>Telegram</p>
-                        <img src="/assets/img/telegram.png" alt="">
+                        <img src="assets/img/telegram.png" alt="">
                     </button>
                 </a>
             </div>
