--- a/sosmed.html
+++ b/sosmed.html
@@ -15,29 +15,29 @@
         <div class="containerCard">
             <div class="containerProfil">
                 <img src="assets/img/profil.png" alt="">
-                <h1>M ALFITO RAHMAN</h1>
+                <h1>BAYU SASTRA DEWANGGA</h1>
                 <p>Social Media</p>
             </div>
             <div class="containerSosmed">
-                <a href="#" class="buttonSosmed">
+                <a href="facebook.com/vrootcyber" class="buttonSosmed">
                     <button>
                         <p>Facebook</p>
                         <img src="assets/img/facebook.png" alt="">
                     </button>
                 </a>
-                <a href="#" class="buttonSosmed">
+                <a href="instagram.com/vrootcyber" class="buttonSosmed">
                     <button>
                         <p>Instagram</p>
                         <img src="assets/img/instagram1.png" alt="">
                     </button>
                 </a>
-                <a href="#" class="buttonSosmed">
+                <a href="https://wa.me/6281234567890" class="buttonSosmed">
                     <button>
                         <p>Whatsapp</p>
                         <img src="assets/img/whatsapp1.png" alt="">
                     </button>
                 </a>
-                <a href="#" class="buttonSosmed">
+                <a href="t.me/broncosaurus" class="buttonSosmed">
                     <button>
                         <p>Telegram</p>
                         <img src="assets/img/telegram.png" alt="">
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="footer">
-            <p>Code By M ALFITO RAHMAN</p>
+            <p></p>
             <i class='bx bxs-check-circle' ></i>
         </div>
     </div>
