--- a/sosmed.html
+++ b/sosmed.html
@@ -19,13 +19,13 @@
                 <p>Social Media</p>
             </div>
             <div class="containerSosmed">
-                <a href="facebook.com/vrootcyber" class="buttonSosmed">
+                <a href="https://facebook.com/vrootcyber" class="buttonSosmed">
                     <button>
                         <p>Facebook</p>
                         <img src="assets/img/facebook.png" alt="">
                     </button>
                 </a>
-                <a href="instagram.com/vrootcyber" class="buttonSosmed">
+                <a href="https://instagram.com/vrootcyber" class="buttonSosmed">
                     <button>
                         <p>Instagram</p>
                         <img src="assets/img/instagram1.png" alt="">
@@ -37,7 +37,7 @@
                         <img src="assets/img/whatsapp1.png" alt="">
                     </button>
                 </a>
-                <a href="t.me/broncosaurus" class="buttonSosmed">
+                <a href="https://t.me/broncosaurus" class="buttonSosmed">
                     <button>
                         <p>Telegram</p>
                         <img src="assets/img/telegram.png" alt="">
