--- a/sosmed.html
+++ b/sosmed.html
@@ -25,7 +25,7 @@
                         <img src="assets/img/facebook.png" alt="">
                     </button>
                 </a>
-                <a href="https://instagram.com/vrootcyber" class="buttonSosmed">
+                <a href="https://instagram.com/bayusastra_d" class="buttonSosmed">
                     <button>
                         <p>Instagram</p>
                         <img src="assets/img/instagram1.png" alt="">
